# order_processing_system

./: .env.example  .gitignore  README.md  claude.md  docker-compose.yml  progress.md  transcript.md
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9a9a0f270d75_initial_schema.py
backend/app/: database.py  dependencies.py  enums.py  exceptions.py  main.py  models.py  schemas.py  security.py  tasks.py
backend/app/routers/: auth.py  orders.py  users.py
backend/app/services/: auth_service.py  order_service.py  user_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/design_handoff/: README.md  diagrams.html  prototype.html
frontend/src/: App.jsx  index.css
frontend/src/api/: orders.js
frontend/src/components/: AdminStatusPatch.jsx  Navbar.jsx  OrderCard.jsx  OrderForm.jsx  StatusBadge.jsx  StatusFilter.jsx  Toast.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AdminOrdersPage.jsx  AdminUsersPage.jsx  CustomerOrdersPage.jsx  LoginPage.jsx  NewOrderPage.jsx  RegisterPage.jsx
frontend/src/routes/: AdminRoute.jsx  PrivateRoute.jsx
frontend/src/utils/: format.js
handoffs/: claude_code_handoff.md  claude_design_handoff.md
seed_data/: order_items_seed_data.json  orders_seed_data.json  seed.py  users_seed_data.json
